--- a/css/regular.css
+++ b/css/regular.css
@@ -6,8 +6,8 @@
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 400;
-  src: url("../webfonts/fa-regular-400.eot");
-  src: url("../webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.woff") format("woff"), url("../webfonts/fa-regular-400.ttf") format("truetype"), url("../webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
+  src: url("https://cdn.jsdelivr.net/gh/bijancot/deliv@5/css/webfonts/fa-regular-400.eot");
+  src: url("https://cdn.jsdelivr.net/gh/bijancot/deliv@5/css/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url(".https://cdn.jsdelivr.net/gh/bijancot/deliv@5/css/webfonts/fa-regular-400.woff2") format("woff2"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@5/css/webfonts/fa-regular-400.woff") format("woff"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@5/css/webfonts/fa-regular-400.ttf") format("truetype"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@5/css/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
 
 .far {
   font-family: 'Font Awesome 5 Free';
