--- a/css/brands.css
+++ b/css/brands.css
@@ -7,7 +7,7 @@
   font-style: normal;
   font-weight: normal;
   src: url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.eot");
-  src: url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-brands-400.woff2") format("woff2"), url("../webfonts/fa-brands-400.woff") format("woff"), url("../webfonts/fa-brands-400.ttf") format("truetype"), url("../webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
+  src: url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.woff2") format("woff2"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.woff") format("woff"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.ttf") format("truetype"), url("https://cdn.jsdelivr.net/gh/bijancot/deliv@6/css/webfonts/fa-brands-400.svg") format("svg"); }
 
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
