--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,23 @@
+@font-face {
+
+    font-family: 'FontAwesomebrand';
+
+    src: url('../webfonts/fa-brands-400.eot');
+
+    src: url('../webfonts/fa-brands-400.eot') format('embedded-opentype'),
+
+      url('../webfonts/fa-brands-400.woff') format('woff'),
+
+      url('../webfonts/fa-brands-400.ttf') format('truetype');
+
+    font-weight: normal;
+
+    font-style: normal;
+
+  }
+
+
+
 .hide-for-small-only > a.button{
 
     font-weight:bold;
@@ -272,7 +292,7 @@ dt{
 
     height:700px !important;
 
-    background-image:url('https://res.cloudinary.com/bijancot/image/upload/q_auto:low/v1533643968/arm/back.jpg') !important;  
+    background-image:url('https://res.cloudinary.com/bijancot/image/upload/q_60/v1533643968/arm/back.jpg') !important;  
 
     background-position: center bottom; 
 
@@ -332,7 +352,7 @@ body>div#main {
 
     color:white !important;
 
-    background-image:url('https://res.cloudinary.com/bijancot/image/upload/q_auto:low/v1533643968/arm/back2.jpg') !important;  
+    background-image:url('https://res.cloudinary.com/bijancot/image/upload/q_60/v1533643968/arm/back2.jpg') !important;  
 
     background-position: center bottom -360px;
 
